revise for Spark 1.5.x