@@ -1,3 +1,4 @@
 export SPARK_HOME=~/opt/spark
 rm -rf bike.parquet
-$SPARK_HOME/bin/spark-shell
+
+SPARK_REPL_OPTS="-XX:MaxPermSize=1024m" $SPARK_HOME/bin/spark-shell
